crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__defined_type_alias_counter_rs.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: content
---
//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

pub type Counter = u64;
