crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__instruction_account_default_from_pda.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: content
---
//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

pub const INITIALIZE_DISCRIMINATOR: u8 = 7u8;

/// Accounts.
#[derive(Clone, Debug)]
pub struct Initialize {
	pub authority: (solana_pubkey::Pubkey, bool),
	pub state: solana_pubkey::Pubkey,
}

impl Initialize {
	pub fn new(authority: (solana_pubkey::Pubkey, bool)) -> Self {
		Self {
			authority,
			state: solana_pubkey::Pubkey::find_program_address(
				&["state".as_bytes(), authority.0.as_ref()],
				&crate::DEFAULT_PROGRAM_ID,
			).0,
		}
	}

	pub fn instruction(&self, data: InitializeInstructionData) -> solana_instruction::Instruction {
		self.instruction_with_remaining_accounts(data, &[])
	}

	#[allow(clippy::arithmetic_side_effects)]
	pub fn instruction_with_remaining_accounts(
		&self,
		data: InitializeInstructionData,
		remaining_accounts: &[solana_instruction::AccountMeta],
	) -> solana_instruction::Instruction {
		let mut accounts = Vec::with_capacity(2 + remaining_accounts.len());
		accounts.push(solana_instruction::AccountMeta::new_readonly(self.authority.0, self.authority.1));
		accounts.push(solana_instruction::AccountMeta::new(self.state, false));
		accounts.extend_from_slice(remaining_accounts);
		solana_instruction::Instruction {
			program_id: crate::DEFAULT_PROGRAM_ID,
			accounts,
			data: data.bytes,
		}
	}
}

/// Opaque, fully initialized instruction storage.
pub struct InitializeInstructionData {
	bytes: Vec<u8>,
}

impl InitializeInstructionData {
	pub fn new(configure: impl FnOnce(&mut InitializeInstructionWireZc)) -> Result<Self, solana_program_error::ProgramError> {
		let mut bytes = vec![0u8; core::mem::size_of::<InitializeInstructionWireZc>()];
		<InitializeInstructionWire as pina::PinaPodFixed>::initialize(&mut bytes, |data| {
			configure(data);
			data.discriminator = INITIALIZE_DISCRIMINATOR;
			Ok(())
		})
			.map_err(|_| solana_program_error::ProgramError::InvalidInstructionData)?;
		Ok(Self { bytes })
	}
}

#[doc(hidden)]
#[allow(clippy::len_without_is_empty)]
#[derive(pina::PinaPod)]
#[pinapod(crate = pina::pinapod, no_inherent)]
pub struct InitializeInstructionWire {
	pub discriminator: u8,
}
