crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__instruction_account_metas_using_self_fields.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: "format!(\"{initialize_content}\\n\\n{increment_content}\")"
---
//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

/// Instruction data for `Initialize`.
/// 
/// Contains the PDA bump seed so the client can pass a pre-computed bump
/// (avoids the cost of `find_program_address` on-chain).
pub const INITIALIZE_DISCRIMINATOR: u8 = 0u8;

/// Accounts.
#[derive(Clone, Debug)]
pub struct Initialize {
	/// The wallet creating the counter. Pays for account creation and becomes
	/// the authority whose address seeds the PDA.
	pub authority: solana_pubkey::Pubkey,
	/// The counter PDA account (must be empty — not yet created).
	pub counter: solana_pubkey::Pubkey,
	/// The system program, required for `CreateAccount` CPI.
	pub system_program: solana_pubkey::Pubkey,
}

impl Initialize {
	pub fn new(authority: solana_pubkey::Pubkey) -> Self {
		Self {
			authority,
			counter: solana_pubkey::Pubkey::find_program_address(
				&["counter".as_bytes(), authority.as_ref()],
				&crate::COUNTER_PROGRAM_ID,
			).0,
			system_program: solana_pubkey::pubkey!("11111111111111111111111111111111"),
		}
	}

	pub fn instruction(&self, data: InitializeInstructionData) -> solana_instruction::Instruction {
		self.instruction_with_remaining_accounts(data, &[])
	}

	#[allow(clippy::arithmetic_side_effects)]
	pub fn instruction_with_remaining_accounts(
		&self,
		data: InitializeInstructionData,
		remaining_accounts: &[solana_instruction::AccountMeta],
	) -> solana_instruction::Instruction {
		let mut accounts = Vec::with_capacity(3 + remaining_accounts.len());
		accounts.push(solana_instruction::AccountMeta::new(self.authority, true));
		accounts.push(solana_instruction::AccountMeta::new(self.counter, false));
		accounts.push(solana_instruction::AccountMeta::new_readonly(self.system_program, false));
		accounts.extend_from_slice(remaining_accounts);
		solana_instruction::Instruction {
			program_id: crate::COUNTER_PROGRAM_ID,
			accounts,
			data: data.bytes,
		}
	}
}

/// Opaque, fully initialized instruction storage.
pub struct InitializeInstructionData {
	bytes: Vec<u8>,
}

impl InitializeInstructionData {
	pub fn new(configure: impl FnOnce(&mut InitializeInstructionWireZc)) -> Result<Self, solana_program_error::ProgramError> {
		let mut bytes = vec![0u8; core::mem::size_of::<InitializeInstructionWireZc>()];
		<InitializeInstructionWire as pina::PinaPodFixed>::initialize(&mut bytes, |data| {
			configure(data);
			data.discriminator = INITIALIZE_DISCRIMINATOR;
			Ok(())
		})
			.map_err(|_| solana_program_error::ProgramError::InvalidInstructionData)?;
		Ok(Self { bytes })
	}
}

#[doc(hidden)]
#[allow(clippy::len_without_is_empty)]
#[derive(pina::PinaPod)]
#[pinapod(crate = pina::pinapod, no_inherent)]
pub struct InitializeInstructionWire {
	pub discriminator: u8,
	/// The PDA bump seed, computed off-chain.
	pub bump: u8,
}


//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

/// Instruction data for `Increment`. No extra payload beyond the
/// discriminator byte.
pub const INCREMENT_DISCRIMINATOR: u8 = 1u8;

/// Accounts.
#[derive(Clone, Debug)]
pub struct Increment {
	/// The counter's authority. Must sign to prove ownership.
	pub authority: solana_pubkey::Pubkey,
	/// The counter PDA account (must already exist and be writable).
	pub counter: solana_pubkey::Pubkey,
}

impl Increment {
	pub fn new(authority: solana_pubkey::Pubkey) -> Self {
		Self {
			authority,
			counter: solana_pubkey::Pubkey::find_program_address(
				&["counter".as_bytes(), authority.as_ref()],
				&crate::COUNTER_PROGRAM_ID,
			).0,
		}
	}

	pub fn instruction(&self, data: IncrementInstructionData) -> solana_instruction::Instruction {
		self.instruction_with_remaining_accounts(data, &[])
	}

	#[allow(clippy::arithmetic_side_effects)]
	pub fn instruction_with_remaining_accounts(
		&self,
		data: IncrementInstructionData,
		remaining_accounts: &[solana_instruction::AccountMeta],
	) -> solana_instruction::Instruction {
		let mut accounts = Vec::with_capacity(2 + remaining_accounts.len());
		accounts.push(solana_instruction::AccountMeta::new_readonly(self.authority, true));
		accounts.push(solana_instruction::AccountMeta::new(self.counter, false));
		accounts.extend_from_slice(remaining_accounts);
		solana_instruction::Instruction {
			program_id: crate::COUNTER_PROGRAM_ID,
			accounts,
			data: data.bytes,
		}
	}
}

/// Opaque, fully initialized instruction storage.
pub struct IncrementInstructionData {
	bytes: Vec<u8>,
}

impl IncrementInstructionData {
	pub fn new(configure: impl FnOnce(&mut IncrementInstructionWireZc)) -> Result<Self, solana_program_error::ProgramError> {
		let mut bytes = vec![0u8; core::mem::size_of::<IncrementInstructionWireZc>()];
		<IncrementInstructionWire as pina::PinaPodFixed>::initialize(&mut bytes, |data| {
			configure(data);
			data.discriminator = INCREMENT_DISCRIMINATOR;
			Ok(())
		})
			.map_err(|_| solana_program_error::ProgramError::InvalidInstructionData)?;
		Ok(Self { bytes })
	}
}

#[doc(hidden)]
#[allow(clippy::len_without_is_empty)]
#[derive(pina::PinaPod)]
#[pinapod(crate = pina::pinapod, no_inherent)]
pub struct IncrementInstructionWire {
	pub discriminator: u8,
}
