crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__optional_accounts_with_program_fallback_strategy.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: content
---
//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

use pina::pinapod;

pub const MAYBE_DISCRIMINATOR: u8 = 9u8;

/// Accounts.
#[derive(Clone, Debug)]
pub struct Maybe {
	pub optional_signer: Option<(solana_pubkey::Pubkey, bool)>,
	pub required_account: solana_pubkey::Pubkey,
}

impl Maybe {
	pub fn new(required_account: solana_pubkey::Pubkey) -> Self {
		Self {
			optional_signer: None,
			required_account,
		}
	}

	pub fn instruction(&self, data: MaybeInstructionData) -> solana_instruction::Instruction {
		self.instruction_with_remaining_accounts(data, &[])
	}

	#[allow(clippy::arithmetic_side_effects)]
	pub fn instruction_with_remaining_accounts(
		&self,
		data: MaybeInstructionData,
		remaining_accounts: &[solana_instruction::AccountMeta],
	) -> solana_instruction::Instruction {
		let mut accounts = Vec::with_capacity(2 + remaining_accounts.len());
		if let Some((optional_signer, signer)) = self.optional_signer {
			accounts.push(solana_instruction::AccountMeta::new_readonly(optional_signer, signer));
		}
		else {
			accounts.push(solana_instruction::AccountMeta::new_readonly(crate::OPTIONAL_PROGRAM_ID, false));
		}
		accounts.push(solana_instruction::AccountMeta::new_readonly(self.required_account, false));
		accounts.extend_from_slice(remaining_accounts);
		solana_instruction::Instruction {
			program_id: crate::OPTIONAL_PROGRAM_ID,
			accounts,
			data: data.bytes,
		}
	}
}

/// Opaque, fully initialized instruction storage.
pub struct MaybeInstructionData {
	bytes: Vec<u8>,
}

impl MaybeInstructionData {
	pub fn new(configure: impl FnOnce(&mut MaybeInstructionWireZc)) -> Result<Self, solana_program_error::ProgramError> {
		let mut bytes = vec![0u8; MaybeInstructionWire::SIZE];
		<MaybeInstructionWire as pina::PinaPodFixed>::initialize(&mut bytes, |data| {
			configure(data);
			data.discriminator = MAYBE_DISCRIMINATOR;
			Ok(())
		})
			.map_err(|_| solana_program_error::ProgramError::InvalidInstructionData)?;
		Ok(Self { bytes })
	}
}

#[doc(hidden)]
#[derive(pina::PinaPod)]
pub struct MaybeInstructionWire {
	pub discriminator: u8,
}
