crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__pda_helpers_for_linked_account.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: content
---
//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

use pina::pinapod;

#[derive(pina::ZeroPod)]
pub struct State {
	pub discriminator: u8,
}

pub const STATE_DISCRIMINATOR: u8 = 1u8;

impl State {
	pub const LEN: usize = <Self as pina::ZeroPodFixed>::SIZE;

	/// Initialize zero-valid account storage.
	///
	/// Every non-discriminator field must accept an all-zero
	/// representation. Otherwise this method returns `InvalidAccountData`.
	pub fn initialize(data: &mut [u8]) -> Result<&mut StateZc, solana_program_error::ProgramError> {
		if data.len() != Self::LEN {
			return Err(solana_program_error::ProgramError::InvalidAccountData);
		}
		data.fill(0);
		let account = <Self as pina::ZeroPodFixed>::from_bytes_mut(data)
			.map_err(|_| solana_program_error::ProgramError::InvalidAccountData)?;
		account.discriminator = STATE_DISCRIMINATOR;
		Ok(account)
	}

	pub fn from_bytes(data: &[u8]) -> Result<&StateZc, solana_program_error::ProgramError> {
		if data.len() != Self::LEN {
			return Err(solana_program_error::ProgramError::InvalidAccountData);
		}
		let account = <Self as pina::ZeroPodFixed>::from_bytes(data)
			.map_err(|_| solana_program_error::ProgramError::InvalidAccountData)?;
		if account.discriminator != STATE_DISCRIMINATOR {
			return Err(solana_program_error::ProgramError::InvalidAccountData);
		}
		Ok(account)
	}

	pub fn from_bytes_mut(data: &mut [u8]) -> Result<&mut StateZc, solana_program_error::ProgramError> {
		if data.len() != Self::LEN {
			return Err(solana_program_error::ProgramError::InvalidAccountData);
		}
		let account = <Self as pina::ZeroPodFixed>::from_bytes_mut(data)
			.map_err(|_| solana_program_error::ProgramError::InvalidAccountData)?;
		if account.discriminator != STATE_DISCRIMINATOR {
			return Err(solana_program_error::ProgramError::InvalidAccountData);
		}
		Ok(account)
	}
}

impl State {
	pub fn find_pda() -> (solana_pubkey::Pubkey, u8) {
		solana_pubkey::Pubkey::find_program_address(
			&[
				"state".as_bytes(),
			],
			&crate::EXAMPLE_PROGRAM_ID,
		)
	}

	pub fn create_pda(bump: u8) -> Result<solana_pubkey::Pubkey, solana_pubkey::PubkeyError> {
		solana_pubkey::Pubkey::create_program_address(
			&[
				"state".as_bytes(),
				&[bump],
			],
			&crate::EXAMPLE_PROGRAM_ID,
		)
	}
}
