crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__recorded_compute_unit_budget.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: "format!(\"{increment}\\n\\n{}\\n\\n{}\",\nread_generated_file(&crate_dir, \"compute_budget.rs\"),\nread_generated_file(&crate_dir, \"mod.rs\"),)"
---
//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

/// Instruction data for `Increment`. No extra payload beyond the
/// discriminator byte.
pub const INCREMENT_DISCRIMINATOR: u8 = 1u8;
/// Compute units `Increment` consumed in its most expensive recorded
/// Surfpool simulation.
pub const INCREMENT_MEASURED_COMPUTE_UNITS: u32 = 379;
/// Compute unit limit to request for a transaction carrying `Increment`:
/// the measurement plus the project's margin and the cost of the compute budget
/// instructions. Pass it, or the sum for several instructions, to
/// `set_compute_unit_limit_instruction`.
pub const INCREMENT_COMPUTE_UNIT_LIMIT: u32 = 800;

/// Accounts.
#[derive(Clone, Debug)]
pub struct Increment {
	/// The counter's authority. Must sign to prove ownership.
	pub authority: solana_pubkey::Pubkey,
	/// The counter PDA account (must already exist and be writable).
	pub counter: solana_pubkey::Pubkey,
}

impl Increment {
	pub fn new(authority: solana_pubkey::Pubkey) -> Self {
		Self {
			authority,
			counter: solana_pubkey::Pubkey::find_program_address(
				&["counter".as_bytes(), authority.as_ref()],
				&crate::COUNTER_PROGRAM_ID,
			).0,
		}
	}

	pub fn instruction(&self, data: IncrementInstructionData) -> solana_instruction::Instruction {
		self.instruction_with_remaining_accounts(data, &[])
	}

	#[allow(clippy::arithmetic_side_effects)]
	pub fn instruction_with_remaining_accounts(
		&self,
		data: IncrementInstructionData,
		remaining_accounts: &[solana_instruction::AccountMeta],
	) -> solana_instruction::Instruction {
		let mut accounts = Vec::with_capacity(2 + remaining_accounts.len());
		accounts.push(solana_instruction::AccountMeta::new_readonly(self.authority, true));
		accounts.push(solana_instruction::AccountMeta::new(self.counter, false));
		accounts.extend_from_slice(remaining_accounts);
		solana_instruction::Instruction {
			program_id: crate::COUNTER_PROGRAM_ID,
			accounts,
			data: data.bytes,
		}
	}
}

/// Opaque, fully initialized instruction storage.
pub struct IncrementInstructionData {
	bytes: Vec<u8>,
}

impl IncrementInstructionData {
	pub fn new(configure: impl FnOnce(&mut IncrementInstructionWireZc)) -> Result<Self, solana_program_error::ProgramError> {
		let mut bytes = vec![0u8; core::mem::size_of::<IncrementInstructionWireZc>()];
		<IncrementInstructionWire as pina::PinaPodFixed>::initialize(&mut bytes, |data| {
			configure(data);
			data.discriminator = INCREMENT_DISCRIMINATOR;
			Ok(())
		})
			.map_err(|_| solana_program_error::ProgramError::InvalidInstructionData)?;
		Ok(Self { bytes })
	}
}

#[doc(hidden)]
#[allow(clippy::len_without_is_empty)]
#[derive(pina::PinaPod)]
#[pinapod(crate = pina::pinapod, no_inherent)]
pub struct IncrementInstructionWire {
	pub discriminator: u8,
}


//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

use solana_pubkey::Pubkey;
use solana_pubkey::pubkey;

/// The Compute Budget program, which sets a transaction's compute unit limit.
pub const COMPUTE_BUDGET_PROGRAM_ID: Pubkey =
	pubkey!("ComputeBudget111111111111111111111111111111");

/// `SetComputeUnitLimit`'s instruction tag in the Compute Budget program.
const SET_COMPUTE_UNIT_LIMIT_TAG: u8 = 2;

/// Build the Compute Budget program's `SetComputeUnitLimit(units)` instruction.
///
/// Add it to a transaction carrying this program's instructions with the sum
/// of their `*_COMPUTE_UNIT_LIMIT` constants. The transaction then requests,
/// and pays priority fees for, the compute units its recorded measurements
/// justify instead of the runtime's default allowance. The sum is
/// conservative: every constant carries its own margin and the compute budget
/// instructions' cost. Instructions for other programs need budgets of their
/// own on top.
#[must_use]
pub fn set_compute_unit_limit_instruction(units: u32) -> solana_instruction::Instruction {
	let mut data = Vec::with_capacity(5);
	data.push(SET_COMPUTE_UNIT_LIMIT_TAG);
	data.extend_from_slice(&units.to_le_bytes());

	solana_instruction::Instruction {
		program_id: COMPUTE_BUDGET_PROGRAM_ID,
		accounts: Vec::new(),
		data,
	}
}


//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

pub mod accounts;
pub mod compute_budget;
pub mod instructions;
pub mod programs;

pub use compute_budget::set_compute_unit_limit_instruction;
#[allow(unused_imports)]
pub(crate) use programs::*;
