crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__rejects_big_endian_numbers.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: err.to_string()
---
unsupported type `numberTypeNode` at `State.count`: only little-endian number types are supported
