crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__rejects_missing_instruction_discriminators.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: err.to_string()
---
missing required discriminator for `instruction `DoThing``
