crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__rejects_variable_size_strings.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: err.to_string()
---
unsupported type `stringTypeNode` at `State.memo`: variable-size strings are not POD
