crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__root_mod_with_unused_program_reexport_allowance.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: content
---
//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

pub mod compute_budget;
pub mod instructions;
pub mod programs;

pub use compute_budget::set_compute_unit_limit_instruction;
#[allow(unused_imports)]
pub(crate) use programs::*;
