crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__todo_initialize_instruction_rs.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: content
---
//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

pub const INITIALIZE_DISCRIMINATOR: u8 = 0u8;
/// Compute units `Initialize` consumed in its most expensive recorded
/// Surfpool simulation.
pub const INITIALIZE_MEASURED_COMPUTE_UNITS: u32 = 1639;
/// Compute unit limit to request for a transaction carrying `Initialize`:
/// the measurement plus the project's margin and the cost of the compute budget
/// instructions. Pass it, or the sum for several instructions, to
/// `set_compute_unit_limit_instruction`.
pub const INITIALIZE_COMPUTE_UNIT_LIMIT: u32 = 2300;

/// Accounts.
#[derive(Clone, Debug)]
pub struct Initialize {
	pub owner: solana_pubkey::Pubkey,
	pub todo: solana_pubkey::Pubkey,
	pub system_program: solana_pubkey::Pubkey,
}

impl Initialize {
	pub fn new(owner: solana_pubkey::Pubkey) -> Self {
		Self {
			owner,
			todo: solana_pubkey::Pubkey::find_program_address(
				&["todo".as_bytes(), owner.as_ref()],
				&crate::TODO_PROGRAM_ID,
			).0,
			system_program: solana_pubkey::pubkey!("11111111111111111111111111111111"),
		}
	}

	pub fn instruction(&self, data: InitializeInstructionData) -> solana_instruction::Instruction {
		self.instruction_with_remaining_accounts(data, &[])
	}

	#[allow(clippy::arithmetic_side_effects)]
	pub fn instruction_with_remaining_accounts(
		&self,
		data: InitializeInstructionData,
		remaining_accounts: &[solana_instruction::AccountMeta],
	) -> solana_instruction::Instruction {
		let mut accounts = Vec::with_capacity(3 + remaining_accounts.len());
		accounts.push(solana_instruction::AccountMeta::new(self.owner, true));
		accounts.push(solana_instruction::AccountMeta::new(self.todo, false));
		accounts.push(solana_instruction::AccountMeta::new_readonly(self.system_program, false));
		accounts.extend_from_slice(remaining_accounts);
		solana_instruction::Instruction {
			program_id: crate::TODO_PROGRAM_ID,
			accounts,
			data: data.bytes,
		}
	}
}

/// Opaque, fully initialized instruction storage.
pub struct InitializeInstructionData {
	bytes: Vec<u8>,
}

impl InitializeInstructionData {
	pub fn new(configure: impl FnOnce(&mut InitializeInstructionWireZc)) -> Result<Self, solana_program_error::ProgramError> {
		let mut bytes = vec![0u8; core::mem::size_of::<InitializeInstructionWireZc>()];
		<InitializeInstructionWire as pina::PinaPodFixed>::initialize(&mut bytes, |data| {
			configure(data);
			data.discriminator = INITIALIZE_DISCRIMINATOR;
			Ok(())
		})
			.map_err(|_| solana_program_error::ProgramError::InvalidInstructionData)?;
		Ok(Self { bytes })
	}
}

#[doc(hidden)]
#[allow(clippy::len_without_is_empty)]
#[derive(pina::PinaPod)]
#[pinapod(crate = pina::pinapod, no_inherent)]
pub struct InitializeInstructionWire {
	pub discriminator: u8,
	pub bump: u8,
	pub digest: [u8; 32],
}
