crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__validates_boolean_encoding_for_pda_variable_seed.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: err.to_string()
---
unsupported type `booleanTypeNode` at `pda boolean seed test`: booleans must use little-endian u8 for PDA seeds
